feat: connect Mail Providers, export as HTML and JSON, update template store to handle prebuilt templates

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #010104;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,6 +25,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -42,7 +43,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button.email-button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -53,11 +54,13 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+
+button.email-button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+
+button.email-button:focus,
+button.email-button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -66,9 +69,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
